hw3_sa/testcases/failing/test21a.tig
/* error : procedure returns value */
let

/* calculate n! */
function nfactor(n: int) =
		if  n = 0 
			then 1
			else n * (n-1)

in
	" "
end

